<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/hdfc_very_light_grey"
              android:layout_width="match_parent"
              android:padding="@dimen/padding_medium"
              android:layout_height="match_parent">
    <com.razor.myprogressbar.view.WrapperLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:visibility="gone"
        android:textSize="@dimen/textsize_xmedium"
        android:textStyle="bold"
        android:text="@string/apartment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.razor.myprogressbar.view.PredicateLayout
        android:layout_marginTop="@dimen/margin_xxsmall"
        android:visibility="gone"
        android:padding="@dimen/padding_small"
        android:id="@+id/apartment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/bhk2"
            android:layout_marginRight="@dimen/margin_xxsmall"
            android:textColor="@color/grey"
            android:text="@string/two_bhk"
            android:tag="BHK2"
            android:padding="@dimen/padding_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/bhk3"
            android:layout_marginRight="@dimen/margin_xxsmall"
            android:text="@string/three_bhk"
            android:textColor="@color/grey"
            android:tag="BHK3"
            android:padding="@dimen/padding_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/bhk4"
            android:layout_marginRight="@dimen/margin_xxsmall"
            android:text="@string/four_bhk"
            android:tag="BHK4"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.razor.myprogressbar.view.PredicateLayout>
    <TextView
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_xxsmall"
        android:textColor="@color/grey"
        android:textSize="@dimen/textsize_xmedium"
        android:text="@string/property_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.razor.myprogressbar.view.PredicateLayout
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_xxsmall"
        android:id="@+id/property_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ap"
            android:tag="AP"
            android:text="@string/apaprtment"
            android:textColor="@color/grey"
            android:layout_marginRight="@dimen/margin_xxsmall"
            android:padding="@dimen/padding_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ih"
            android:tag="IH"
            android:textColor="@color/grey"
            android:text="@string/independent_house"
            android:padding="@dimen/padding_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ifh"
            android:tag="IF"
            android:textColor="@color/grey"
            android:text="@string/independent_floor"
            android:padding="@dimen/padding_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.razor.myprogressbar.view.PredicateLayout>

    <TextView
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_xxsmall"
        android:text="@string/furnished_type"
        android:textSize="@dimen/textsize_xmedium"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.razor.myprogressbar.view.PredicateLayout
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_xxsmall"
        android:id="@+id/furnished_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/furnished_full"
            android:layout_marginRight="@dimen/margin_xxsmall"
            android:textColor="@color/grey"
            android:text="@string/fully_furnished"
            android:padding="@dimen/padding_medium"
            android:tag="FULL_FURNISHED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/furnished_semi"
            android:layout_marginRight="@dimen/margin_xxsmall"
            android:textColor="@color/grey"
            android:text="@string/semi_furnished"
            android:tag="SEMI_FURNISHED"
            android:padding="@dimen/padding_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.razor.myprogressbar.view.PredicateLayout>
    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:id="@+id/clear_filter"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/clear"
            android:gravity="center"
            android:textSize="@dimen/textsize_xmedium"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_medium"
            android:background="@drawable/round_corner"
            android:layout_marginRight="@dimen/margin_xsmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/apply_filter"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:text="@string/apply"
            android:textSize="@dimen/textsize_xmedium"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_medium"
            android:background="@drawable/round_corner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>