<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="@dimen/margin_xsmall"
    app:cardElevation="2dp"
    android:minHeight="200dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="0dp"
    android:background="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.percent.PercentRelativeLayout
            android:padding="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/property_title_container"
                app:layout_widthPercent="70%"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/property_title"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/dummy_flat_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/property_address"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:id="@+id/property_address"
                    android:layout_below="@+id/property_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <ImageView
                android:id="@+id/wishlist"
                android:tint="@color/hdfc_red"
                android:layout_toRightOf="@+id/property_title_container"
                app:layout_widthPercent="15%"
                android:src="@drawable/ic_wishlist"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_toRightOf="@+id/wishlist"
                app:layout_widthPercent="15%"
                android:tint="@color/hdfc_red"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_call"
                android:layout_height="wrap_content"/>
        </android.support.percent.PercentRelativeLayout>
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/property_image"
            android:src="@drawable/ic_live_tv_black_48dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/padding_medium"
                android:layout_weight="1"
                android:id="@+id/property_price"
                android:maxLines="1"
                android:textStyle="bold"
                android:background="@drawable/border"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:ellipsize="end"
                android:textSize="@dimen/textsize_medium"
                android:text="@string/dummy_flat_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:padding="@dimen/padding_medium"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/textsize_small"
                    android:id="@+id/funished"
                    android:text="Full Furnished"
                    android:layout_marginBottom="@dimen/margin_xxsmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="@dimen/textsize_small"
                    android:id="@+id/bathrooms"
                    android:text="3 bathrooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:padding="@dimen/padding_medium"
                android:layout_weight="1"
                android:id="@+id/property_area"
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:ellipsize="end"
                android:text="@string/dummy_flat_area"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>